# raytracer_challenge

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  conanfile.txt  main.cpp
include/: canvas.h  intersection.h  light.h  material.h  matrix.h  ray.h  sphere.h  transformations.h  tuple.h  utils.h  world.h
src/: camera.rs  canvas.rs  color.rs  intersections.rs  light.rs  main.rs  materials.rs  matrix.rs  patterns.rs  plane.rs  ray.cpp  rays.rs  shape.rs  sphere.rs  transformations.rs  tuple.rs  world.rs
tests/: CMakeLists.txt  canvas_test.cpp  intersection_test.cpp  light_test.cpp  material_test.cpp  matrix_test.cpp  ray_test.cpp  rays_test.cpp  sphere_test.cpp  transformation_test.cpp  tuple_test.cpp  world_test.cpp
